[package]
name = "forrustts"
version = "0.3.0-alpha.0"
edition = "2021"
authors = ["molpopgen <krthornt@uci.edu>"]
description = "Forward-time simulation with tree sequence recording in rust."
license = "MIT"
homepage = "https://github.com/ForwardSimulation/forrustts"
repository = "https://github.com/ForwardSimulation/forrustts"
keywords = ["simulation", "tree_sequences", "tskit", "population_genetics"]

# Added for rust >= 1.80.0
[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(doc_cfg)'] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[workspace]
members = [
    "forrustts-core",
    "forrustts-genetics",
]

[profile.release]
lto = "fat"
codegen-units = 1

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]

[dependencies]
forrustts-core = { version = "0.1.0", path = "forrustts-core" }
forrustts-genetics = { version = "0.1.0", path = "forrustts-genetics" }
