[package]
name = "forrustts-genetic-maps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forrustts-core = { version = "0.1.0", path = "../forrustts-core" }

[dev-dependencies]
rand = "0.8.5"
rand_distr = "0.4.3"

[features]
bench = [] # requires nightly
