[package]
name = "forrustts-genetics"
version = "0.1.0"
edition = "2021"
authors = ["molpopgen <krthornt@uci.edu>"]
description = "Forward-time simulation with tree sequence recording in rust."
license = "MIT"
homepage = "https://github.com/ForwardSimulation/forrustts"
repository = "https://github.com/ForwardSimulation/forrustts"
keywords = ["simulation", "tree_sequences", "tskit", "population_genetics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forrustts-core = { version = "0.1.0", path = "../forrustts-core", features = ["rand"]}
rand = "0.9.0"
rand_distr = "0.5.0"
