[package]
name = "forrustts-rng"
version = "0.1.0"
edition = "2018"
authors = ["molpopgen <krthornt@uci.edu>"]
description = "Random number generation for forrustts"
license = "GPL-3.0-or-later"
homepage = "https://github.com/ForwardSimulation/forrustts"
repository = "https://github.com/ForwardSimulation/forrustts"
keywords = ["simulation", "tree_sequences", "tskit", "population_genetics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
GSL = "4.0"
