[package]
name = "forrustts-simplify"
version = "0.1.0"
authors = ["molpopgen <krthornt@uci.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
forrustts-util = { version = "0.1.0", path = "../forrustts-util" }
forrustts-definitions = { version = "0.1.0", path = "../forrustts-definitions" }
forrustts-tables = { version = "0.1.0", path = "../forrustts-tables" }
