[package]
name = "forrustts-tables-trees"
version = "0.2.0"
authors = ["molpopgen <krthornt@uci.edu>"]
edition = "2018"
description = "Table collections, tree sequences, and simplification."
license = "GPL-3.0-or-later"
homepage = "https://github.com/ForwardSimulation/forrustts"
repository = "https://github.com/ForwardSimulation/forrustts"
keywords = ["simulation", "tree_sequences", "tskit", "population_genetics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tskit = "0.6.1"

[dependencies]
bitflags = "1.2.1"
num-traits = "0.2.14"
streaming-iterator = "0.1.5"
thiserror = "1.0"
