[package]
name = "forrustts-tables"
version = "0.1.0"
authors = ["molpopgen <krthornt@uci.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
bitflags = "1.2.1"
forrustts-definitions = { version = "0.1.0", path = "../forrustts-definitions" }
