[package]
name = "forrustts-tables"
version = "0.1.0"
authors = ["molpopgen <krthornt@uci.edu>"]
edition = "2021"
description = "Table collections, tree sequences, and simplification."
license = "MIT"
homepage = "https://github.com/ForwardSimulation/forrustts"
repository = "https://github.com/ForwardSimulation/forrustts"
keywords = ["simulation", "tree_sequences", "tskit", "population_genetics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
tskit = "0.14.0"

[dependencies]
bitflags = "1.2.1"
thiserror = "1.0"
forrustts-core = { version = "0.1.0", path = "../forrustts-core" }
