[package]
name = "forrustts-trees"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2.1"
streaming-iterator = "0.1.5"
thiserror = "1.0"
forrustts-core = { version = "0.1.0", path = "../forrustts-core" }
forrustts-tables = { version = "0.1.0", path = "../forrustts-tables" }
forrustts-simplification = { version = "0.1.0", path = "../forrustts-simplification" }
