[package]
name = "forrustts-tskit"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.67"
fnv = "1.0.7"

[dependencies]
bitflags = "1.2.1"
forrustts-tables-trees = { version = "0.2.0", path = "../forrustts-tables-trees" }
thiserror = "1.0"
tskit = "0.4.0"
