[package]
name = "forrustts-tskit"
version = "0.1.0"
edition = "2018"
description = "Data interchange with tskit"
authors = ["molpopgen <krthornt@uci.edu>"]
license = "GPL-3.0-or-later"
homepage = "https://github.com/ForwardSimulation/forrustts"
repository = "https://github.com/ForwardSimulation/forrustts"
keywords = ["simulation", "tree_sequences", "tskit", "population_genetics"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.67"
fnv = "1.0.7"
tskit = {version = "0.5.0", features = ["derive"]}

[dependencies]
bitflags = "1.2.1"
forrustts-tables-trees = { version = "0.2.0", path = "../forrustts-tables-trees" }
thiserror = "1.0"
tskit = "0.5.0"
