[package]
name = "forrustts-tskit"
version = "0.1.0"
edition = "2021"
description = "Data interchange with tskit"
authors = ["molpopgen <krthornt@uci.edu>"]
license = "MIT"
homepage = "https://github.com/ForwardSimulation/forrustts"
repository = "https://github.com/ForwardSimulation/forrustts"
keywords = ["simulation", "tree_sequences", "tskit", "population_genetics"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
serde = {version = "1.0.118", features = ["derive"]}
serde_json = "1.0.67"
tskit = {version = "0.13.1", features = ["derive"]}

[dependencies]
bitflags = "1.2.1"
forrustts-core = { version = "0.1.0", path = "../forrustts-core" }
forrustts-tables = { version = "0.1.0", path = "../forrustts-tables" }
thiserror = "1.0"
tskit = "0.13.1"
