[package]
name = "forrustts-util"
version = "0.1.0"
authors = ["molpopogen <krthornt@uci.edu>"]
edition = "2018"
description = "Common data structures and functions for forrustts"
license = "MIT"
homepage = "https://github.com/ForwardSimulation/forrustts"
repository = "https://github.com/ForwardSimulation/forrustts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
