[package]
name = "forrustts"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
bitflags = "1.2.1"
clap = "~2.33.3"
rand = "0.8.3"
rand_distr = "0.4.0"
streaming-iterator = "0.1.5"
tskit = "=0.3.0"

[dependencies]
forrustts-tables-trees = { version = "0.2.0", path = "../forrustts-tables-trees" }
thiserror = "1.0"

[[example]]
name = "forward_simulation"
