[package]
name = "forrustts"
version = "0.1.0"
edition = "2018"
authors = ["molpopgen <krthornt@uci.edu>"]
description = "Forward-time simulation with tree sequence recording in rust."
license = "GPL-3.0-or-later"
homepage = "https://github.com/ForwardSimulation/forrustts"
repository = "https://github.com/ForwardSimulation/forrustts"
keywords = ["simulation", "tree_sequences", "tskit", "population_genetics"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dev-dependencies]
bitflags = "1.2.1"
clap = "~3.0.0"
streaming-iterator = "0.1.5"
GSL = "6.0"
tskit = "0.6.1"

[dependencies]
forrustts-tables-trees = { version = "0.2.0", path = "../forrustts-tables-trees" }
forrustts-tskit = { version = "0.1.0", path = "../forrustts-tskit" }
thiserror = "1.0"

[[example]]
name = "forward_simulation"
